@@ -162,7 +162,10 @@ program.
 
 If the coderef is omitted this function will create a new "empty"
 coroutine, i.e. a coroutine that cannot be transfered to but can be used
-to save the current coroutine in.
+to save the current coroutine state in (note that this is dangerous, as no
+reference is taken to ensure that the "current coroutine state" survives,
+the caller is responsible to ensure that the cloned state does not go
+away).
 
 The returned object is an empty hash which can be used for any purpose
 whatsoever, for example when subclassing Coro::State.
